:notebook: Create rake commands for Notebook convert/test

--- a/doc/qmd/examples_of_red_amber.qmd
+++ b/doc/qmd/examples_of_red_amber.qmd
@@ -6,6 +6,11 @@ format:
   pdf:
     code-fold: false
 jupyter: ruby
+format:
+  pdf:
+    toc: true
+    fontfamily: libertinus
+    colorlinks: true
 ---
 
 For RedAmber Version 0.5.1-HEAD and Arrow version 12.0.1 .
