--- a/doc/qmd/red-amber.qmd
+++ b/doc/qmd/red-amber.qmd
@@ -2,24 +2,13 @@
 title: RedAmber Examples
 date: 2023-08-06
 author: heronshoes
+jupyter: ruby
 format:
   pdf:
     toc: true
-    number-sections: true
-    colorlinks: true
-  ipynb:
-    markdown-headings: atx
-    ipynb-output: all
-    toc: true
-    toc-depth: 2
-    number-sections: true
-    execute:
-      eval: true
-      output: true
 ---
 
 This notebook walks through the [README of RedAmber](https://github.com/heronshoes/red_amber#readme).
-
 
 ## `RedAmber::DataFrame`
 
