:memo: Remove a trailing ,
Because of a syntax error. Missed in 4ee58e7.

--- a/doc/qmd/examples_of_red_amber.qmd
+++ b/doc/qmd/examples_of_red_amber.qmd
@@ -63,7 +63,7 @@ gem 'red-arrow-numo-narray'    # Optional, recommended if you use inputs from Nu
 gem 'red-parquet', '>= 12.0.0' # Optional, if you use IO from/to parquet
 gem 'red-datasets-arrow'       # Optional, recommended if you use Red Datasets
 gem 'red-arrow-activerecord'   # Optional, if you use Active Record
-gem 'rover-df',                # Optional, if you use IO from/to Rover::DataFrame.
+gem 'rover-df'                 # Optional, if you use IO from/to Rover::DataFrame.
 ```
 
 And then execute `bundle install` or install it yourself as `gem install red_amber`.
